[tool.poetry]
name = "python-api-automation"
version = "0.1.0"
description = ""
authors = ["Dmitry Skvortsov <dscworstsov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.1"
requests = "^2.32.3"
allure-pytest = "^2.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
